--- a/train/environment.yml
+++ b/train/environment.yml
@@ -50,21 +50,30 @@ dependencies:
     - absl-py==0.12.0
     - astor==0.8.1
     - cached-property==1.5.2
+    - cycler==0.10.0
     - gast==0.2.2
     - google-pasta==0.2.0
     - grpcio==1.36.1
     - h5py==3.1.0
     - importlib-metadata==3.7.3
+    - joblib==1.0.1
     - keras-applications==1.0.8
     - keras-preprocessing==1.1.2
+    - kiwisolver==1.3.1
     - markdown==3.3.4
+    - matplotlib==3.3.4
     - numpy==1.19.5
     - opt-einsum==3.3.0
     - protobuf==3.15.6
+    - pyparsing==2.4.7
+    - scikit-learn==0.24.1
+    - seaborn==0.11.1
+    - sklearn==0.0
     - tensorboard==1.15.0
     - tensorflow-estimator==1.15.1
     - tensorflow-gpu==1.15.0
     - termcolor==1.1.0
+    - threadpoolctl==2.1.0
     - typing-extensions==3.7.4.3
     - werkzeug==1.0.1
     - wrapt==1.12.1
